# afrolid

./: README.md  pyproject.toml
notebooks/: demo.ipynb
src/afrolid/: __init__.py  __main__.py  conversion.py  language_info.py  model.py  utils.py
